Document run.bat usage and update scripts